[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/other/launchpad/launchpad body.png" type="Texture" id=1]
[ext_resource path="res://sprites/other/launchpad/launchpad launcher.png" type="Texture" id=2]
[ext_resource path="res://scripts/launchpad.gd" type="Script" id=3]
[ext_resource path="res://animations/Launchpad Launch.tres" type="Animation" id=4]
[ext_resource path="res://audio/Launchpad Launch.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=3]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 88, 10.6422 )

[node name="Launchpad" type="Node2D"]
script = ExtResource( 3 )

[node name="SupportBeam" type="Line2D" parent="."]
scale = Vector2( 1, 1.00495 )
points = PoolVector2Array( 0, 0, 0, 0 )
default_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )

[node name="LaunchDelay" type="Timer" parent="."]
wait_time = 1.19
one_shot = true

[node name="Animation" type="AnimationPlayer" parent="."]
root_node = NodePath("../Launcher")
anims/Launch = ExtResource( 4 )
anims/RESET = SubResource( 3 )

[node name="Launcher" type="Sprite" parent="."]
position = Vector2( -101, 1 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )
offset = Vector2( 168.221, -1.50361 )

[node name="BeamPos1" type="Node2D" parent="Launcher"]
position = Vector2( 268, 3 )

[node name="Body" type="Sprite" parent="."]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 1 )

[node name="BeamPos0" type="Node2D" parent="Body"]
position = Vector2( 93.7054, 11.1161 )

[node name="Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area"]
position = Vector2( 0, -5.3578 )
shape = SubResource( 1 )

[node name="Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 3.0
max_distance = 3500.0
attenuation = 0.15
bus = "sfx"
